Add additional bootstrap 5.2 var's

--- a/faq copy/templates/faq/faq.html
+++ b/faq copy/templates/faq/faq.html
@@ -77,6 +77,8 @@
         porro adipisci quas iste error ea vero recusandae, laboriosam corrupti, 
         tempore necessitatibus maiores ipsam praesentium ut? Aspernatur, eaque. 
         Dolorem, placeat.</p>
+
+    <button type="button" class="btn btn-primary">Primary</button>
     
     <div class="accordion" id="faqAccordion">
         {% for question in questions %}
