--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,18 +2,27 @@
 
 :root{
   --gw-primary-color: #EFC102;
+  --gw-primary-lighter-color: #F0E582;
   --gw-secondary-color: #7BF1A8;
   --gw-dark: #090C08;
   --gw-btn-txt: #709255;
   --gw-cta-btn-bg: #7BF1A8;
+
+  --gw-btn-main: #9DD9D2;
+  --gw-btn-dark: #71ABA5;
+  --gw-btn-darker: #46807A;
+  --gw-btn-darkest: #1A5751;
 }
+
 
 .accordion {
   --bs-accordion-border-color: var(--gw-dark);
 }
 
-.form-control {
-  border-radius: 0;
+
+.accordion-item {
+  border-radius: 0 !important;
+  ;
 }
 
 .btn {
@@ -27,21 +36,22 @@
   
 }
 
+
 .btn-primary {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #0d6efd;
-  --bs-btn-border-color: #0d6efd;
+  --bs-btn-color: var(--gw-dark);
+  --bs-btn-bg: var(--gw-btn-main);
+  --bs-btn-border-color: var(--gw-btn-main);
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #0b5ed7;
-  --bs-btn-hover-border-color: #0a58ca;
+  --bs-btn-hover-bg: var(--gw-btn-dark);
+  --bs-btn-hover-border-color: var(--gw-btn-darker);
   --bs-btn-focus-shadow-rgb: 49, 132, 253;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #0a58ca;
-  --bs-btn-active-border-color: #0a53be;
+  --bs-btn-active-bg: var(--gw-btn-darker);
+  --bs-btn-active-border-color: var(--gw-btn-darkest);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #0d6efd;
-  --bs-btn-disabled-border-color: #0d6efd;
+  --bs-btn-disabled-bg: var(--gw-btn-main);
+  --bs-btn-disabled-border-color: var(--gw-btn-main);
 }
 
 .card {
