--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,6 +14,11 @@
   --gw-btn-darkest: #1A5751;
 }
 
+.accordion-button:not(.collapsed) {
+  color: var(--bs-accordion-active-color);
+  background-color: var(--gw-primary-lighter-color);
+  box-shadow: inset 0 calc(var(--bs-accordion-border-width) * -1) 0 var(--bs-accordion-border-color);
+}
 
 .accordion {
   --bs-accordion-border-color: var(--gw-dark);
