--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -69,7 +69,7 @@
 {% endblock %}
 
 {% block content %}
-<button type="button" class="btn btn-primary">Primary</button>
+
 <div class="container">
     <h1>FAQ!</h1>
     <h1>We hear you may have a question for Get Wurst?</h1>
@@ -137,7 +137,7 @@
     <form action="{% url 'question' %}" id="ask-question" method="post" class="my-3">
         {% csrf_token %}
         {{ question_form | crispy }}
-        <input type="submit" value="Submit Question">
+        <input type="submit" class="btn btn-primary" value="Submit Question">
     </form>
 </div>
 {% endblock %}
