Change .form-control in base css and remove individual styles in templates

--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -80,7 +80,7 @@
                 <h6 class="card-title text-center">{{ product.name }}</h6>
                 <p class="card-text">{{ product.description }}</p>
                 <div class="d-grid mb-2">
-                    <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info" role="button">
+                    <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-cta" role="button">
                         See More Info
                     </a>
                 </div>
