--- a/templates/includes/cat-nav.html
+++ b/templates/includes/cat-nav.html
@@ -13,7 +13,7 @@
                      <a class="nav-link" href="{% url 'products' %}?category=Schnitzel"> Schnitzel </a>
                  </li>
                  <li>
-                     <form class="d-flex border border-3 border-dark" role="search" method="GET" action="{% url 'products' %}">
+                     <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
                          <input class="form-control rounded-0" type="search" placeholder="Search"
                              aria-label="Search" name="q">
                          <button class="btn btn-primary" type="submit">Search</button>
