--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -25,7 +25,7 @@
                             <div class="form-group w-75">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn 
+                                        <button class="decrement-qty btn primary-light
                                      rounded-0" data-item_id="{{ product.id }}"
                                             id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
@@ -37,7 +37,7 @@
                                         value="1" min="1" max="15" data-item_id="{{ product.id }}"
                                         id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
-                                        <button class="increment-qty btn 
+                                        <button class="increment-qty btn primary-light
                                     rounded-0" data-item_id="{{ product.id }}"
                                             id="increment-qty_{{ product.id }}">
                                             <span class="icon">
@@ -57,7 +57,7 @@
                                     Back to Menu
                                 </span>
                             </a>
-                            <input type="submit" class="btn" value="Add to Cart">
+                            <input type="submit" class="btn btn-cta" value="Add to Cart">
                         </div>
                         <!-- hidden form element to redirect back to page came from (redirect_url) -->
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
