--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -92,7 +92,8 @@
                         <div class="card-body">
                             <div class="image-container">
                                 <img class="card-img-top card-img" src="{{ event.image.url }}" alt="{{ event.name }}">
-                                <a href="{{ event.link }}" target="_blank" rel="noopener" aria-label="Visit {{ event.name }}'s page (opens in a new tab)">
+                                <a href="{{ event.link }}" class="event-link" target="_blank" rel="noopener"
+                                    aria-label="Visit {{ event.name }}'s page (opens in a new tab)">
                                     <h1 class="card-title">{{ event.name }}</h1>
                                 </a>
                                 <p class="card-text">{{ event.date|date:"M o" }}</p>
