--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -25,7 +25,7 @@
                             <div class="form-group w-75">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn primary-light
+                                        <button class="decrement-qty btn primary-light form-comtrol-pend
                                      rounded-0" data-item_id="{{ product.id }}"
                                             id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
@@ -33,12 +33,12 @@
                                             </span>
                                         </button>
                                     </div>
-                                    <input class="form-control qty_input" type="number" name="quantity"
+                                    <input class="form-control qty_input border-start-0 border-end-0 mb-3" type="number" name="quantity"
                                         value="1" min="1" max="15" data-item_id="{{ product.id }}"
                                         id="id_qty_{{ product.id }}">
-                                    <div class="input-group-append">
+                                    <div class="input-group-append"> 
                                         <button class="increment-qty btn primary-light
-                                    rounded-0" data-item_id="{{ product.id }}"
+                                     form-comtrol-pend" data-item_id="{{ product.id }}"
                                             id="increment-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
