--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,6 +22,15 @@
   --gw-link-hover: #578DB6;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Paytone One', sans-serif;
+}
+
 .accordion-item:first-of-type .accordion-button {
   border-radius: 0;
 }
@@ -111,17 +120,18 @@ a:hover {
     color:var(--gw-link-hover);
 }
 
-
+a.nav-link {
+  color:var(--gw-dark)
+}
 #footer {
   background-color: var(--gw-primary-color);
 }
 
 .navbar {
   background-color: var(--gw-primary-color);
-  color: red;
 }
 
-.nav-link {
+.nav-link a {
   color: var(--gw-dark);
 }
 
@@ -129,9 +139,6 @@ a:hover {
   color: var(--gw-dark);
 }
 
-.gw-h1 {
-  color: #EFC102;
-}
 
 *{
   box-sizing: border-box;
@@ -173,269 +180,13 @@ body {
     object-fit: cover;
 }
 
-/* #hero-img-container {
-  background-image: url('media/hero.jpg');
-  
-} */
-/* from Bulma */
-/* .icon {
-  align-items: center;
-  display: inline-flex;
-  justify-content: center;
-  height: 1.5rem;
-  width: 1.5rem;
-} */
 
-/* .no-border {
-  border: 0;
-} */
-
-/* SEARCH BAR............ */
-
-/* .sbx-custom {
-  display: inline-block;
-  position: relative;
-  width: 300px;
-  height: 51px;
-  white-space: nowrap;
-  box-sizing: border-box;
-  font-size: 14px;
-}
-
-.sbx-custom__wrapper {
-  width: 100%;
-  height: 100%;
-}
-
-.sbx-custom__input {
-  display: inline-block;
-  -webkit-transition: box-shadow .4s ease, background .4s ease;
-  transition: box-shadow .4s ease, background .4s ease;
-  border: 0;
-  border-radius: 26px;
-  box-shadow: inset 0 0 0 2px #181919;
-  background: #FFFFFF;
-  padding: 0;
-  padding-right: 41px;
-  padding-left: 51px;
-  width: 100%;
-  height: 100%;
-  vertical-align: middle;
-  white-space: normal;
-  font-size: inherit;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-.sbx-custom__input::-webkit-search-decoration,
-.sbx-custom__input::-webkit-search-cancel-button,
-.sbx-custom__input::-webkit-search-results-button,
-.sbx-custom__input::-webkit-search-results-decoration {
-  display: none;
-}
-
-.sbx-custom__input:hover {
-  box-shadow: inset 0 0 0 2px black;
-}
-
-.sbx-custom__input:focus,
-.sbx-custom__input:active {
-  outline: 0;
-  box-shadow: inset 0 0 0 2px #FF2E83;
-  background: #FFFFFF;
-}
-
-.sbx-custom__input::-webkit-input-placeholder {
-  color: #BBBBBB;
-}
-
-.sbx-custom__input::-moz-placeholder {
-  color: #BBBBBB;
-}
-
-.sbx-custom__input:-ms-input-placeholder {
-  color: #BBBBBB;
-}
-
-.sbx-custom__input::placeholder {
-  color: #BBBBBB;
-}
-
-.sbx-custom__submit {
-  position: absolute;
-  top: 0;
-  right: inherit;
-  left: 0;
-  margin: 0;
-  border: 0;
-  border-radius: 25px 0 0 25px;
-  background-color: rgba(255, 255, 255, 0);
-  padding: 0;
-  width: 51px;
-  height: 100%;
-  vertical-align: middle;
-  text-align: center;
-  font-size: inherit;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.sbx-custom__submit::before {
-  display: inline-block;
-  margin-right: -4px;
-  height: 100%;
-  vertical-align: middle;
-  content: '';
-}
-
-.sbx-custom__submit:hover,
-.sbx-custom__submit:active {
-  cursor: pointer;
-}
-
-.sbx-custom__submit:focus {
-  outline: 0;
-}
-
-.sbx-custom__submit svg {
-  width: 31px;
-  height: 31px;
-  vertical-align: middle;
-  fill: #181919;
-}
-
-.sbx-custom__reset {
-  display: none;
-  position: absolute;
-  top: 12px;
-  right: 12px;
-  margin: 0;
-  border: 0;
-  background: none;
-  cursor: pointer;
-  padding: 0;
-  font-size: inherit;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  fill: rgba(0, 0, 0, 0.5);
-}
-
-.sbx-custom__reset:focus {
-  outline: 0;
-}
-
-.sbx-custom__reset svg {
-  display: block;
-  margin: 4px;
-  width: 19px;
-  height: 19px;
-}
-
-.sbx-custom__input:valid~.sbx-custom__reset {
-  display: block;
-  -webkit-animation-name: sbx-reset-in;
-  animation-name: sbx-reset-in;
-  -webkit-animation-duration: .15s;
-  animation-duration: .15s;
-}
-
-@-webkit-keyframes sbx-reset-in {
-  0% {
-    -webkit-transform: translate3d(-20%, 0, 0);
-    transform: translate3d(-20%, 0, 0);
-    opacity: 0;
-  }
-
-  100% {
-    -webkit-transform: none;
-    transform: none;
-    opacity: 1;
-  }
-}
-
-@keyframes sbx-reset-in {
-  0% {
-    -webkit-transform: translate3d(-20%, 0, 0);
-    transform: translate3d(-20%, 0, 0);
-    opacity: 0;
-  }
-
-  100% {
-    -webkit-transform: none;
-    transform: none;
-    opacity: 1;
-  }
-} */
-
-/* END SEARCH BAR............ */
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Paytone One', sans-serif;
-}
 
 .hero {
   height: 60vh
 }
 .hero-img {
-  /* transform:translateX(50%); */
-  /* background-image: url("/media/hero-burger.png"); */
-  /* height:25vh; */
-  /* background-position: 70vw 0vw;  */
-  /* background-size: 100%;  */
-  /* background-repeat: no-repeat;  */
-  /* min-height: 100%; */
-  /* max-width:100%; */
   height:60vh;
   transform: translateX(-25%);
 }
 
-.hero-highlight {
-  color: red;
-}
-
-
-/* .white-text {
-  color: white;
-} */
-
-/* Adapted from https://getcssscan.com/css-buttons-examples */
-
-
-/* .primary-btn {
-  background-color: #fbeee0;
-  border: 2px solid #422800;
-  border-radius: 30px;
-  box-shadow: #422800 4px 4px 0 0;
-  color: #422800;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 600;
-  font-size: 18px;
-  padding: 0 18px;
-  line-height: 50px;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.primary-btn:hover {
-  background-color: #fff;
-}
-
-.primary-btn:active {
-  box-shadow: #422800 2px 2px 0 0;
-  transform: translate(2px, 2px);
-}
-
-@media (min-width: 768px) {
-  .primary-btn {
-    min-width: 120px;
-    padding: 0 25px;
-  }
-} */
