--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -50,7 +50,7 @@
                                     <div class="input-group">
                                         <div class="input-group-prepend">
                                             <button class="decrement-qty btn 
-                                            btn-sm btn-black rounded-0"
+                                             form-comtrol-pend border-end-0"
                                                 data-item_id="{{ item.item_id }}" 
                                                 id="decrement-qty_{{ item.item_id }}">
                                                 <span>
@@ -62,7 +62,7 @@
                                             name="quantity" value="{{ item.quantity }}" min="1" max="15"
                                             data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                            <button class="increment-qty btn form-comtrol-pend border-start-0"
                                                 data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                                                 <span>
                                                     <i class="fas fa-plus fa-sm"></i>
