--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container header-container">
+<div class="container header-container mt-5">
     <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="col-md-6 mx-auto border border-5 border-dark">
             <div class="allauth-form-inner-content">
                 {% block inner_content %}
                 {% endblock %}
