--- a/static/css/base.css
+++ b/static/css/base.css
@@ -85,6 +85,7 @@ h6 {
   --bs-btn-disabled-border-color: var(--gw-btn-main);
 }
 
+
 .form-control {
   color: var(--gw-dark);
   border: 3px solid var(--gw-dark);
@@ -99,6 +100,18 @@ h6 {
 .form-check-input[type=checkbox] {
   border: 3px solid var(--gw-dark);
 }
+
+/* WHT NEEDED?? WHY DIFFERENTLY STYLED TO SIGN IN FORM??????z */
+#signup_form p input {
+  border: 3px solid var(--gw-dark);
+  width: 100%;
+  height: 42px;
+}
+
+/* form input {
+  border: 3px solid var(--gw-dark);
+  width: 100%
+} */
 
 .card {
   --bs-card-border-color: var(--gw-dark);
