--- a/static/css/base.css
+++ b/static/css/base.css
@@ -102,11 +102,11 @@ h6 {
 }
 
 /* WHT NEEDED?? WHY DIFFERENTLY STYLED TO SIGN IN FORM??????z */
-#signup_form p input {
+/* #signup_form p input {
   border: 3px solid var(--gw-dark);
   width: 100%;
   height: 42px;
-}
+} */
 
 /* form input {
   border: 3px solid var(--gw-dark);
