--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <!-- template taken from code institute boutique ado walkthrough -->
-<div class="container mb-2">
+<div class="container mb-2 thick-border">
     <div class="row">
         <div class="col">
             <hr>
