Change position of welcome text in nav

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -5,12 +5,12 @@
 
 {% block content %}
 <!-- template taken from code institute boutique ado walkthrough -->
-<div class="container mb-2 thick-border">
+<div class="container thick-border">
     <div class="row">
         <div class="col">
-            <hr>
+
             <h2 class="logo-font mb-4">Shopping Cart</h2>
-            <hr>
+
         </div>
     </div>
 
