--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -69,7 +69,7 @@
 {% endblock %}
 
 {% block content %}
-<section class="container my-3">
+<section class="container">
     <div class="row hero align-items-center">
         <div class="col-11">
             <h1 class="py-3">Banging <span class="gw-h1">BRATWURSTS.</span></h1>
@@ -87,7 +87,7 @@
     </div> 
 </section>
 
-<section class="container my-3">
+<section class="container">
     <h2 class="text-center">Our Story</h2>
     <p>Get Wurst is run by Paul and Lindsay Melbourne, who spent many a trip to Berlin eating currywurst on the streets
         in the early hours. Get Wurst was then born in 2015 out of a frustration of not being able to get a proper
