--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container header-container mt-5">
+<div class="container header-container">
     <div class="row">
         <div class="col-md-6 mx-auto border border-5 border-dark">
             <div class="allauth-form-inner-content">
