--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -73,7 +73,7 @@
 
 
 {% block content %}
-<div class="container mb-2">
+<div class="container">
     <div class="row">
         <div class="col-12 col-md-6">
             <hr>
