--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -69,7 +69,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container my-5">
+<div class="container">
     <div class="row"> 
         {% for product in products %}
         <div class="card" style="width: 18rem;">
