--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-<div class="card mb-3 border border-5 border-dark w-75 mx-auto my-5">
+<div class="card border border-5 border-dark w-75 mx-auto">
     <div class="row g-0">
         <div class="col-md-4">
             <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
