--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -28,8 +28,9 @@
                  </li>
                  {% endif %}
                  {% if user.is_authenticated %}
+                 
                  <li class="nav-item order-lg-1 ms-lg-auto">
-                    <p>Hi, {{ user.get_username }}</p>
+                    
                      <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                  </li>
                  {% else %}
@@ -76,6 +77,9 @@
                          <i class="fa-solid fa-user"></i>
                          My Profile
                      </a>
+                 </li>
+                 <li>
+                     <p class="navbar-text nav-color">Hi, {{ user.get_username }}</p>
                  </li>
                  {% endif %}
              </ul>
