--- a/products/templates/products/all copy.html
+++ b/products/templates/products/all copy.html
@@ -70,81 +70,62 @@
 
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-12 mt-3">
-            <div class="row">
-                {% for product in products %}
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="image-container">
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="card-img-top card-img" src="{{ product.image.url }}" alt="{{ product.name }}">
-                                <!-- ADD ARIA LABEL -->
-                                <h1 class="card-title">{{ product.name }}</h1>
-                                </a>
-                                <p class="card-text">{{ product.short_description }}</p>
-                            </div>
-                            <div class="d-grid mb-2">
-                                <a href="{% url 'products' %}?category={{ product.category }}"
-                                    class="card-subtitle mb-2 text-muted text-decoration-none">
-                                    {{ product.category }}
-                                </a>
-                                <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-cta mb-3"
-                                    role="button">
-                                    See More Info
-                                </a>
-                                <!-- Button trigger modal -->
-                                {% if request.user.is_superuser %}
-                                <div class="card-body border-top border-1 border-dark">
-                                    <div class="d-grid gap-2 mb-2">
-                                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                            data-bs-target="#deleteProductModal">
-                                            DELETE
-                                        </button>
-                                        <a class="btn btn-secondary" href="{% url 'edit_product' product.id %}">
-                                            Edit
-                                        </a>
-                                    </div>
-                                </div>
-                                <!-- Modal -->
-                                <div class="modal fade" id="deleteProductModal" tabindex="-1"
-                                    aria-labelledby="deleteProductModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h1 class="modal-title fs-5" id="deleteProductModalLabel">Modal title
-                                                </h1>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                Are you sure you want to delete {{ product.name }}?
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary"
-                                                    data-bs-dismiss="modal">Cancel</button>
-                                                <a class="btn btn-danger"
-                                                    href="{% url 'delete_product' product.id %}">Delete</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div> <!-- closes modal -->
-                                {% endif %}
-                            </div>
+    <div class="row"> 
+        {% for product in products %}
+        <div class="card" style="width: 18rem;">
+            <a href="{% url 'product_detail' product.id %}">
+                <img src="{{ product.image.url }}" class="card-img-top" alt="{ product.name }}">
+            </a>
+            <div class="card-body">
+                <h6 class="card-title text-center">{{ product.name }}</h6>
+                <p class="card-text">{{ product.description }}</p>
+                <div class="d-grid mb-2">
+                    <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-cta" role="button">
+                        See More Info
+                    </a>
+                </div>
+                <a href="{% url 'products' %}?category={{ product.category }}"
+                    class="card-subtitle mb-2 text-muted text-decoration-none">
+                    {{ product.category }}
+                </a>
+            </div> <!-- closes card-body -->
+            <!-- Button trigger modal -->
+            {% if request.user.is_superuser %}
+            <div class="d-grid gap-2 mb-2">
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deleteProductModal">
+                    DELETE 
+                </button>
+                <a class="btn btn-secondary" href="{% url 'edit_product' product.id %}">
+                    Edit
+                </a>
+            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="deleteProductModal" tabindex="-1" aria-labelledby="deleteProductModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="deleteProductModalLabel">Modal title</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete {{ product.name }}?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <a class="btn btn-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                         </div>
                     </div>
                 </div>
-                {% if forloop.counter|divisibleby:3 %}
-            </div>
-            <div class="row">
-                {% endif %}
-                {% endfor %}
-            </div>
-        </div>
-    </div>
-</div>
-
+            </div> <!-- closes modal -->
+            {% endif %}
+        </div> <!-- closes card -->
+    </div> <!-- closes row -->
+        {% empty %} 
+        NO PRODUCTS YET 
+        {% endfor %} 
+</div> <!-- closes container -->
 {% endblock %} 
 {% block postloadjs %} 
 {{ block.super }}
