--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -87,7 +87,7 @@
         <div class="col-12 mt-3">
             <div class="row">
                 {% for event in events %}
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
