--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -74,13 +74,17 @@
         <div class="col-12 mt-3">
             <div class="row">
                 {% for product in products %}
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="card-img-top card-img" src="{{ product.image.url }}" alt="{{ product.name }}">
                                 <!-- ADD ARIA LABEL -->
+                                <a href="{% url 'product_detail' product.id %}">
+                                    <img class="card-img-top card-img" src="{{ product.image.url }}"
+                                        alt="{{ product.name }}" class="h-50">
+                                </a>
+                            </div>
+                            <div>
                                 <h1 class="card-title">{{ product.name }}</h1>
                                 </a>
                                 <p class="card-text">{{ product.short_description }}</p>
@@ -135,10 +139,6 @@
                         </div>
                     </div>
                 </div>
-                {% if forloop.counter|divisibleby:3 %}
-            </div>
-            <div class="row">
-                {% endif %}
                 {% endfor %}
             </div>
         </div>
