--- a/static/css/base.css
+++ b/static/css/base.css
@@ -201,15 +201,15 @@ body {
 
 .card-img {
     width: 100%;
-    height: 15vw;
+    height: 40vh;
     object-fit: cover;
 }
-
 
 
 .hero {
   height: 60vh
 }
+
 .hero-img {
   height:60vh;
   transform: translateX(-25%);
