--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -5,6 +5,8 @@
 
 {% block content %}
 <!-- template taken from code institute boutique ado walkthrough -->
+<div class="container">
+<h1>Shopping Cart</h1>
 <div class="container thick-border">
     <div class="row">
         <div class="col">
@@ -115,6 +117,7 @@
             {% endif %}
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
 
