Add no products text to menu templates

--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -139,6 +139,8 @@
                         </div>
                     </div>
                 </div>
+                {% empty %}
+                <h2>NO PRODUCTS YET</h2>
                 {% endfor %}
             </div>
         </div>
