--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -70,10 +70,10 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container mb-3">
     <h1>FAQ!</h1>
     <h1>We hear you may have a question for Get Wurst?</h1>
-    <a href="#ask-question" class="btn btn-primary">Ask Question</a>
+    <a href="#ask-question" class="btn btn-primary my-3">Ask Question</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate id 
         porro adipisci quas iste error ea vero recusandae, laboriosam corrupti, 
         tempore necessitatibus maiores ipsam praesentium ut? Aspernatur, eaque. 
@@ -134,7 +134,7 @@
 </div>
 
 <div class="container">
-    <form action="{% url 'question' %}" id="ask-question" method="post" class="my-3">
+    <form action="{% url 'question' %}" id="ask-question" method="post">
         {% csrf_token %}
         {{ question_form | crispy }}
         <input type="submit" class="btn btn-primary" value="Submit Question">
