--- a/templates/includes/cat-nav.html
+++ b/templates/includes/cat-nav.html
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand mb-5">
+ <nav class="navbar navbar-expand">
      <div class="container-fluid">
          <div class="collapse navbar-collapse" id="catNavContent">
              <ul class="navbar-nav ms-auto mb-2 mb-lg-0 w-100 
