--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,18 +1,20 @@
 {% load static %}
 {% block content %}
-<footer id="footer" class="d-flex justify-content-center fixed-bottom py-1">
-    <a href="https://www.facebook.com/" class="text-decoration-none me-5 text-center" rel="noopener" target="_blank"
-        aria-label="Go to Get Wurst Facebook page (opens in a new tab)">
-        <i class="fa-brands fa-facebook fs-1"></i>
-    </a>
-    <a href="https://www.instagram.com/" class="text-decoration-none me-5 text-center" rel="noopener" target="_blank"
-        aria-label="Go to Get Wurst Instagram page (opens in a new tab)">
-        <i class="fa-brands fa-instagram fs-1"></i>
-    </a>
-    <a href="https://www.privacypolicygenerator.info/live.php?token=U9Qya6pffZHvuxKlvoUsgnWuvzVZf0Cw"
-        class="text-decoration-none fs-4 text-center" rel="noopener" target="_blank"
-        aria-label="Go to Get Wurst Privacy Policy (opens in a new tab)">
-        Privacy Policy
-    </a>
+<div class="container mt-3">
+    <footer id="footer" class="d-flex justify-content-center fixed-bottom py-1">
+        <a href="https://www.facebook.com/" class="text-decoration-none me-5 text-center" rel="noopener" target="_blank"
+            aria-label="Go to Get Wurst Facebook page (opens in a new tab)">
+            <i class="fa-brands fa-facebook fs-1"></i>
+        </a>
+        <a href="https://www.instagram.com/" class="text-decoration-none me-5 text-center" rel="noopener" target="_blank"
+            aria-label="Go to Get Wurst Instagram page (opens in a new tab)">
+            <i class="fa-brands fa-instagram fs-1"></i>
+        </a>
+        <a href="https://www.privacypolicygenerator.info/live.php?token=U9Qya6pffZHvuxKlvoUsgnWuvzVZf0Cw"
+            class="text-decoration-none fs-4 text-center" rel="noopener" target="_blank"
+            aria-label="Go to Get Wurst Privacy Policy (opens in a new tab)">
+            Privacy Policy
+        </a>
 </footer>
+</div>
 {% endblock %}
