--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -74,8 +74,8 @@
         <div class="col-12">
             <div class="row">
                 {% for product in products %}
-                <div class="col-md-6 col-lg-4">
-                    <div class="card mb-3">
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="card">
                         <div class="card-body">
                             <div class="image-container">
                                 <!-- ADD ARIA LABEL -->
