Add h1 and p to menu/all template

--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -70,6 +70,10 @@
 
 {% block content %}
 <div class="container">
+<h1>Menu</h1>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis fugit amet blanditiis libero eligendi? Blanditiis eius maxime, 
+    placeat nemo similique optio. Placeat sint labore maxime dolor, saepe repellendus ad? Harum.</p>
+<!-- <div class="container"> -->
     <div class="row">
         <div class="col-12">
             <div class="row">
