Change schnitzels to burgers

--- a/templates/includes/cat-nav.html
+++ b/templates/includes/cat-nav.html
@@ -7,10 +7,10 @@
                     <a class="nav-link" href="{% url 'products' %}?category=Bratwurst">Bratwurst</a>
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="{% url 'products' %}?category=Currywurst"> Currywurst </a>
+                     <a class="nav-link" href="{% url 'products' %}?category=Currywurst">Currywurst</a>
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="{% url 'products' %}?category=Schnitzel"> Schnitzel </a>
+                     <a class="nav-link" href="{% url 'products' %}?category=Burger">Burgers</a>
                  </li>
                  <li>
                      <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
