Add lorem text below each menu categroy

--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -75,6 +75,8 @@
         eius maxime, placeat nemo similique optio. Placeat sint labore maxime dolor, saepe repellendus ad? Harum.</p>
     
     <h2>Bratwursts</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, qui. Iste eaque, laboriosam ex temporibus,
+         doloribus facilis amet minima assumenda pariatur voluptate aut impedit eum dolor perferendis soluta atque culpa.</p>
     <div class="row">
         {% for product in products %}
             {% if product.category|slugify == 'bratwurst' %}
@@ -84,6 +86,8 @@
     </div>
 
     <h2>Currywurst</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cupiditate eligendi deserunt architecto rem dicta sed voluptates, 
+        laudantium omnis excepturi exercitationem. Minus necessitatibus vitae explicabo molestiae quis consequatur earum placeat.</p>
     <div class="row">
         {% for product in products %}
             {% if product.category|slugify == 'currywurst' %}
@@ -93,6 +97,8 @@
     </div>
 
     <h2>Burgers</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores recusandae voluptatibus rem odit quisquam fugit qui, 
+        molestias omnis alias dolor blanditiis animi aut debitis explicabo laudantium porro dolore consectetur tenetur!</p>
     <div class="row">
         {% for product in products %}
             {% if product.category|slugify == 'burger' %}
