Add .secondary-color to index text

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -72,9 +72,9 @@
 <section class="container">
     <div class="row hero align-items-center">
         <div class="col-11">
-            <h1 class="py-3">Banging <span class="gw-h1">BRATWURSTS.</span></h1>
-            <h1 class="py-3">Proper <span class="gw-h1">CURRYWURST.</span></h1>
-            <h1 class="py-3">And now.......<br><span class="gw-h1">BURGERS.</span></h1>
+            <h1 class="py-3">Banging <span class="secondary-color">BRATWURSTS.</span></h1>
+            <h1 class="py-3">Proper <span class="secondary-color">CURRYWURST.</span></h1>
+            <h1 class="py-3">And now.......<br><span class="secondary-color">BURGERS.</span></h1>
             <div class="my-3">
                 <h4>
                     <a class="btn btn-lg btn-cta" href="{% url 'products' %}" role="button">View Menu</a>
