--- a/products/templates/products/includes/menu-card.html
+++ b/products/templates/products/includes/menu-card.html
@@ -23,7 +23,8 @@
                 </a>
                 <!-- Button trigger modal -->
                 {% if request.user.is_superuser %}
-                <div class="card-body border-top border-1 border-dark">
+                <hr>
+                <div class="card-body">
                     <div class="d-grid gap-2 mb-2">
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                             data-bs-target="#deleteProductModal">
