Work in progress. Only show relevant category info

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,6 +22,11 @@
   --gw-link-hover: #578DB6;
 }
 
+.modal-content {
+  border-radius: 0;
+  border: 5px solid var(--gw-dark);
+}
+
 .secondary-color {
   color: var(--gw-btn-main);
 }
