--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -73,21 +73,35 @@
     <h1>Menu</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis fugit amet blanditiis libero eligendi? Blanditiis
         eius maxime, placeat nemo similique optio. Placeat sint labore maxime dolor, saepe repellendus ad? Harum.</p>
-    
-    <h2 id="bratwursts">Bratwursts</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, qui. Iste eaque, laboriosam ex temporibus,
-         doloribus facilis amet minima assumenda pariatur voluptate aut impedit eum dolor perferendis soluta atque culpa.</p>
+        {% if current_categories|length == 0 %}
+        <h2 id="bratwurst">Bratwurst</h2>
+        <p>BRATTY INFO BRATTY INFO BRATTY INFO BRATTY INFO BRATTY INFO BRATTY INFO BRATTY INFO BRATTY INFO</p>
+        {% endif %}
+        {% for category in current_categories %}
+        {% if category|lower == 'bratwurst' %}
+            <h2 id="bratwurst">Bratwurst</h2>
+            <p>BRATTY INFO BRATTY INFO BRATTY INFO BRATTY INFO BRATTY INFO BRATTY INFO BRATTY INFO BRATTY INFO</p>
+        {% endif %}
+        {% endfor %}
+
     <div class="row">
         {% for product in products %}
             {% if product.category|slugify == 'bratwurst' %}
                 {% include 'products/includes/menu-card.html' %}
             {% endif %}
         {% endfor %} 
-    </div>
+    </div> 
 
-    <h2 id="currywursts">Currywurst</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cupiditate eligendi deserunt architecto rem dicta sed voluptates, 
-        laudantium omnis excepturi exercitationem. Minus necessitatibus vitae explicabo molestiae quis consequatur earum placeat.</p>
+    {% if current_categories|length == 0 %}
+         <h2 id="currywurst">Currywurst</h2>
+         <p>CURRY INFO</p>
+    {% endif %}
+    {% for category in current_categories %}
+    {% if category|lower == 'currywurst' %}
+    <h2 id="currywurst">Currywurst</h2>
+    <p>CURRY INFO</p>
+     {% endif %}
+     {% endfor %}
     <div class="row">
         {% for product in products %}
             {% if product.category|slugify == 'currywurst' %}
@@ -96,9 +110,17 @@
         {% endfor %}
     </div>
 
+    {% if current_categories|length == 0 %}
     <h2 id="burgers">Burgers</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores recusandae voluptatibus rem odit quisquam fugit qui, 
-        molestias omnis alias dolor blanditiis animi aut debitis explicabo laudantium porro dolore consectetur tenetur!</p>
+    <p>BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO</p>
+    {% endif %}
+    {% for category in current_categories %}
+    {% if category|lower == 'burger' %}
+    <h2 id="burgers">Burgers</h2>
+    <p>BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO</p>
+    {% endif %}
+    {% endfor %}
+    
     <div class="row">
         {% for product in products %}
             {% if product.category|slugify == 'burger' %}
