--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -80,7 +80,7 @@
         Dolorem, placeat.</p>
 
     <!-- HOW ADD ARIA-CONTROLS WHEN DON;T KNOW HOW many   -->
-    <button class="btn btn-primary" onclick="toggleFaq()" id="faqToggle" type="button" data-bs-toggle="collapse"
+    <button class="btn btn-secondary" onclick="toggleFaq()" id="faqToggle" type="button" data-bs-toggle="collapse"
         data-bs-target=".multi-collapse"
         aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Expand All</button>
 
