--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -89,7 +89,7 @@
                 id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-black rounded-0 text-uppercase 
+                <button class="btn btn-primary rounded-0 text-uppercase 
                     float-right">
                     Update Information
                 </button>
