--- a/static/css/base.css
+++ b/static/css/base.css
@@ -83,7 +83,26 @@ h6 {
 
 .btn-primary {
   --bs-btn-color: var(--gw-dark);
+  /* --bs-btn-bg: var(--gw-btn-main); */
   --bs-btn-bg: var(--gw-btn-main);
+  --bs-btn-border-color: var(--gw-dark);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: var(--gw-btn-dark);
+  --bs-btn-hover-border-color: var(--gw-btn-darker);
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: var(--gw-btn-darker);
+  --bs-btn-active-border-color: var(--gw-btn-darkest);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: var(--gw-btn-main);
+  --bs-btn-disabled-border-color: var(--gw-btn-main);
+}
+
+.btn-secondary {
+  --bs-btn-color: var(--gw-dark);
+  /* --bs-btn-bg: var(--gw-primary-lighter-color); */
+  --bs-btn-bg: #7BF1A8;
   --bs-btn-border-color: var(--gw-dark);
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: var(--gw-btn-dark);
@@ -147,7 +166,7 @@ a:link {
 }
 
 a:visited {
-  color: var(--gw-link-visited);
+  color: #616361;
 }
 
 a:hover {
