Add .p-3 to products/detail img

--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -7,7 +7,7 @@
 <div class="card border border-5 border-dark w-75 mx-auto">
     <div class="row g-0">
         <div class="col-md-4">
-            <img src="{{ product.image.url }}" class="img-fluid h-100" alt="{{ product.name }}">
+            <img src="{{ product.image.url }}" class="img-fluid h-100 p-3" alt="{{ product.name }}">
         </div>
         <div class="col-md-8 d-flex">
             <div class="card-body my-auto">
