--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -1,7 +1,7 @@
 {% if widget.is_initial %}
 <p>{{ widget.initial_text }}:</p>
 <a href="{{ widget.value.url }}">
-    <img width="96" height="96" class="rounded shadow-sm" 
+    <img width="96" height="96" class="shadow-sm mb-3" 
         src="{{ widget.value.url }}">
 </a>
 {% if not widget.required %}
@@ -14,7 +14,7 @@
 {% endif %}<br>
 {{ widget.input_text }}
 {% endif %}
-<span class="btn btn-black rounded-0 btn-file">
+<span class="btn rounded-0 border border-dark border-3">
     Select Image <input id="new-image" type="{{ widget.type }}" 
         name="{{ widget.name }}"
         {% include "django/forms/widgets/attrs.html" %}>
