--- a/products/templates/products/edit.html
+++ b/products/templates/products/edit.html
@@ -1,23 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
-{% endblock %}
-
 {% block content %}
-<div class="overlay"></div>
 <div class="container">
     <div class="row">
         <div class="col-12 col-md-6">
-            <hr>
             <h2 class="logo-font mb-4">Product Management</h2>
             <h5 class="text-muted">Edit a Product</h5>
-            <hr>
         </div>
     </div>
 
@@ -35,9 +24,9 @@
                 {% endif %}
                 {% endfor %}
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" 
+                    <a class="btn btn-secondary" 
                         href="{% url 'products' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">
+                    <button class="btn btn-primary" type="submit">
                         Update Product
                     </button>
                 </div>
