--- a/faq copy/templates/faq/faq.html
+++ b/faq copy/templates/faq/faq.html
@@ -107,11 +107,11 @@
                             value="{{ answer.id }}"><i class="fa-solid fa-thumbs-up"></i>
                         </button>
                         <!-- <input type="hidden" name="next" value=" {{ answer.id }}"> -->
+                        {% if answer.liked %}
+                        YOU HAVE LIKED
+                        {% endif %}
+                        {% endif %}
                     </form>
-                    {% if liked %}
-                    YOU HAVE LIKED
-                    {% endif %}
-                    {% endif %}
                     <span>Liked by {{ answer.like.all.count }} user{{ answer.like.all.count|pluralize }}</span>
                     
                     <!-- {% if forloop.last %}
