Change all references of currywurst to chicken

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -73,7 +73,7 @@
     <div class="row hero align-items-center">
         <div class="col-11">
             <h1 class="py-3">Banging <span class="secondary-color">BRATWURSTS.</span></h1>
-            <h1 class="py-3">Proper <span class="secondary-color">CURRYWURST.</span></h1>
+            <h1 class="py-3">Proper <span class="secondary-color">CHICKEN.</span></h1>
             <h1 class="py-3">And now.......<br><span class="secondary-color">BURGERS.</span></h1>
             <div class="my-3">
                 <h4>
@@ -89,9 +89,9 @@
 
 <section class="container">
     <h2 class="text-center">Our Story</h2>
-    <p>Get Wurst is run by Paul and Lindsay Melbourne, who spent many a trip to Berlin eating currywurst on the streets
+    <p>Get Wurst is run by Paul and Lindsay Melbourne, who spent many a trip to Berlin eating bratwurst on the streets
         in the early hours. Get Wurst was then born in 2015 out of a frustration of not being able to get a proper
-        currywurst in the UK. Well, now you can, dishing up the good stuff at events and festivals across the North, and
+        bratwurst in the UK. Well, now you can, dishing up the good stuff at events and festivals across the North, and
         at our new home in Sheffield city centre at the top of Fargate, where you can enjoy some serious german street
         food 7 days a week from lunch till late.</p>
 </section>
