--- a/templates/includes/cat-nav.html
+++ b/templates/includes/cat-nav.html
@@ -8,7 +8,7 @@
                     <!-- <a class="nav-link" href="/menu/#bratwursts">Bratwurst</a> -->
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="{% url 'products' %}?category=Currywurst">Currywurst</a>
+                     <a class="nav-link" href="{% url 'products' %}?category=Chicken">Chicken</a>
                      <!-- <a class="nav-link" href="/menu/#currywursts">Currywurst</a> -->
                  </li>
                  <li class="nav-item">
