Add max-height to .card-img-top

--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -77,7 +77,7 @@
         nihil illum delectus! Maiores laudantium ea obcaecati voluptatibus neque exercitationem dolorum sunt quos
         nesciunt.
         Delectus nemo magni aliquid culpa. Minus excepturi beatae quam adipisci deserunt esse laborum ipsam,
-        repellendus,
+        repellendus,/menu/
         ducimus temporibus voluptate reiciendis? Quia labore consequuntur vitae placeat. Possimus quod quasi tenetur
         obcaecati quidem.</p>
 </div>
