Change clamp font-size for h1 - h6, p and .nav-link

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -87,6 +87,25 @@
     </div> 
 </section>
 
+<section>
+    <h1>h1 gfdsgdsgfdsgfdsgfds</h1>
+    <h2>h2 gfdsgdsgfdsgfdsgfds</h2>
+    <h3>h3 gfdsgdsgfdsgfdsgfds</h3>
+    <h4>h4 gfdsgdsgfdsgfdsgfds</h4>
+    <h5>h5 gfdsgdsgfdsgfdsgfds</h5>
+    <h6>h6 gfdsgdsgfdsgfdsgfds</h6>
+    <p>p gfdsgdsgfdsgfdsgfds</p>
+
+
+
+
+
+
+
+
+
+</section>
+
 <section class="container">
     <h2 class="text-center">Our Story</h2>
     <p>Get Wurst is run by Paul and Lindsay Melbourne, who spent many a trip to Berlin eating bratwurst on the streets
