Remnove radius from accordion-item and accordion-button

--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -98,7 +98,7 @@
                 {% if forloop.first %} show {% endif %}" 
                 aria-labelledby="heading{{question.id}}"
                 data-bs-parent="#faqAccordion">
-                <div class="accordion-body ">
+                <div class="accordion-body border-0">
                     {% for answer in question.question_answer.all %}
                         {% if answer.status == 1 %}
                         <p>{{ answer.body | safe }}</p>
