--- a/static/css/base.css
+++ b/static/css/base.css
@@ -64,12 +64,17 @@ h6 {
 
 .accordion {
   --bs-accordion-border-color: var(--gw-dark);
+
 }
 
 .accordion-body :last-child > hr {
   display: none;
 }
 
+.accordion-item,
+.accordion-button {
+  border-radius: 0 !important;
+}
 
 .btn {
   --bs-btn-border-radius: 0;
@@ -268,28 +273,16 @@ body {
 
 p,
 .nav-link {
-  /* font-size: clamp(1rem, 1.5rem, 2rem); */
-  /* font-size: 1.5rem; */
-  /* font-size: clamp(1rem, 0.3077rem + 3.0769vw, 3rem); */
   font-size: clamp(1rem, 0.7647rem + 1.1765vw, 1.5rem);
-  /* font-size: 1rem; */
 }
 
 h1 {
-  /* font-size: var(--gw-font-size-1); */
-  /* font-size: clamp(2.3125rem, 2.2321rem + 0.4018vw, 2.875rem); */
-  /* font-size: clamp(5rem, 4.7143rem + 1.4286vw, 7rem); */
-  /* font-size: clamp(2rem, 1.7647rem + 1.1765vw, 2.5rem); */
-  /* font-size: clamp(1.6875rem, 1.5404rem + 0.7353vw, 2rem); */
   font-size: clamp(2rem, 1.7647rem + 1.1765vw, 2.5rem);
 }
 
 h2 {
-  /* font-size: var(--gw-font-size-2); */
-  /* font-size: clamp(4.5rem, 4.2857rem + 1.0714vw, 5rem); */
-  /* font-size: clamp(4.5rem, 4.4286rem + 0.3571vw, 5rem); */
   font-size: clamp(1.6875rem, 1.5404rem + 0.7353vw, 2rem);
-  /* font-size: clamp(1.6875rem, 1.5404rem + 0.7353vw, 2rem); */
+
 }
 
 /* NOTN USED YET, CHANGE ALL h4's to h3's, h5's to h4 etc */
@@ -297,9 +290,8 @@ h3 {
   font-size: clamp(1.5625rem, 1.4743rem + 0.4412vw, 1.75rem);
 }
 
-
 h4 {
-  /* font-size: clamp(4rem, 3.9286rem + 0.3571vw, 4.5rem); */
+
   font-size: clamp(1.375rem, 1.3162rem + 0.2941vw, 1.5rem);
 }
 
@@ -307,7 +299,3 @@ h5 {
   font-size: clamp(1.25rem, 1.2206rem + 0.1471vw, 1.3125rem);
 }
 
-
-/* h6 {
-
-} */
